# dooms_deal_clock

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  run.py
.claude/: settings.local.json
app/: .env.example  __init__.py  config.py  main.py  migrations.py  models.py
app/db/: base.py  session.py
app/services/: background_tasks.py  clock_service.py  parser.py
app/telegram_api/: client.py
app/utils/: database.py  db.py  logging.py
docs/: DOCKER_AUTH.md  TODO_STATIC_PUSH.md
scripts/: telegram_auth.py  telegram_status.py
tests/: conftest.py
tests/ui/: conftest.py  test_layout_and_links.py  test_links_clickable.py  test_scrolling.py
tests/unit/: test_api_endpoints.py  test_config.py  test_main.py  test_migrations.py  test_models.py  test_models_focused.py
tests/unit/services/: test_background_tasks.py  test_background_tasks_runtime.py  test_clock_service.py  test_parser.py
tests/unit/telegram_api/: test_client.py  test_client_media.py
tests/unit/utils/: test_database.py  test_db.py  test_logging.py
web/: admin.html  admin.js  index.html  script.js  styles.css
